  - Townyperms.yml nations' default rank will automatically be given towny.command.nation.spawn.
  - Add 2 convenience methods to PreNewTownEvent, courtesy of Warriorrrr with PR #5504.
  - Fix possible tab completion NPE, courtesy of Warriorrrr with PR #5506.
  - Allow lava_cauldrons to kill minecarts.
    - Closes #5503.
  - Call the pre new town event after any confirmations are confirmed, courtesy of Warriorrrr with PR #5508.
  - API: Add tab-completion helper methods to TownyAPI.
0.97.5.2:
  - Fix language strings added to Towny via the API throwing errors for players using un-translated locales. 
  - New Command: /ta nation [nationname] transfer [townname]
    - Places the given town into the given nation, removing any old nation if needed.
    - Works toward closing #4906.
  - Fix bonemealing trees and grass not being aware of the player involved, and their permissions.
    - Closes #5517.
  - API: Add TownPreClaimEvent to initial TownBlock claimed during new Town code.
  - Fix lang\global.yml files generating empty on new installs.
  - Fix lang\override\ folder not being made on new installs.
  - Fix nations that change kings setting a null spawn when the new capital has a town spawn.
  - Replace underscores on override lang keys properly, courtesy of Warriorrrr with PR #5522.
    - Closes #5521.
  - Fix aborted teleports not refunding the spawn travel cost.
    - Closes #5526.
  - Add INK_SAC and GLOW_INK_SAC to ItemLists list of Dyes, to prevent them being used on Signs.
  - Automatic Config Update: 
    - RESPAWN_ANCHOR will be added to new_world_settings.plot_management.wild_revert_on_block_explosion.blocks,
    - Their explosions will be reverted in new worlds.
    - Your world files will also have it added, meaning existing worlds with block explosion revert set to on will start reverting Respawn Anchor explosions.
  - Make /ta set mayor TOWNNAME NPC be more careful about setting the NPC-run towns to have no upkeep.