@@ -7065,3 +7065,5 @@ v0.92.0.11:
     - Their explosions will be reverted in new worlds.
     - Your world files will also have it added, meaning existing worlds with block explosion revert set to on will start reverting Respawn Anchor explosions.
   - Make /ta set mayor TOWNNAME NPC be more careful about setting the NPC-run towns to have no upkeep.
+  - Fix Title/Subtitles not showing when entering/exiting a town.
+    - Closes #5532.
